# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile.build  README.md  analyze_idl.py  package.json  tsconfig.json
.github/workflows/: ci.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
programs/sss-core/: Cargo.toml
programs/sss-core/src/: constants.rs  error.rs  events.rs  lib.rs
programs/sss-core/src/instructions/: authority.rs  blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs  views.rs
programs/sss-core/src/state/: mod.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: error.rs  lib.rs
programs/sss-transfer-hook/src/instructions/: execute.rs  initialize.rs  mod.rs
programs/sss-transfer-hook/src/state/: mod.rs
sdk/: package.json  tsconfig.json  tsconfig.tsbuildinfo
sdk/src/: client.ts  compliance.ts  errors.ts  index.ts  pda.ts  presets.ts  types.ts
sdk/src/instructions/: authority.ts  blacklist.ts  burn.ts  freeze.ts  index.ts  initialize.ts  mint.ts  pause.ts  roles.ts  seize.ts
sdk/tests/: sdk.test.ts
tests/: sss-1.test.ts  sss-2.test.ts
