[workspace]
members = [
    "programs/sss-core",
    "programs/sss-transfer-hook",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 0

# Pin to avoid edition2024 incompatibility with SBF platform-tools v1.51 (rustc 1.84)
[workspace.dependencies]
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
