[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard — Core program supporting SSS-1, SSS-2, and SSS-3 presets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.6"
spl-transfer-hook-interface = "0.9"
spl-tlv-account-resolution = "0.9"
