[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard — Transfer Hook program for SSS-2 blacklist enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9"
spl-tlv-account-resolution = "0.9"
